Find out that SINR can be interfered; set BS for all scenes, create open_area scene for evaluation test

--- a/scene_self_test.ipynb
+++ b/scene_self_test.ipynb
@@ -22,22 +22,22 @@
      "output_type": "stream",
      "text": [
       "=== Scene self-test summary ===\n",
-      "config_path: /home/jhuang52/Projects/metaRL_merged/inner_loop/model_a/configs/chapel_modelA.json\n",
+      "config_path: /home/jhuang52/Projects/metaRL_merged/inner_loop/model_a/configs/sf_modelA.json\n",
       "project_root: /home/jhuang52/Projects/metaRL_merged\n",
-      "scene_xml: /data/jhuang52/Projects/metaRL_merged/scenarios/Chapel-Hill-(Campus)/final-scene.xml\n",
-      "buildings_json: /data/jhuang52/Projects/metaRL_merged/scenarios/chapel_buildings.json\n",
+      "scene_xml: /data/jhuang52/Projects/metaRL_merged/scenarios/San-Francisco-(SoMa)/final-scene.xml\n",
+      "buildings_json: /data/jhuang52/Projects/metaRL_merged/scenarios/sf_buildings.json\n",
       "\n",
       "--- counts ---\n",
-      "num_buildings: 1361\n",
+      "num_buildings: 2515\n",
       "num_uav: 5\n",
       "num_gus: 150\n",
       "num_bs: 2\n",
       "\n",
       "--- extents (from buildings json) ---\n",
-      "x_range: (-996.4613647460938, 988.262451171875)\n",
-      "y_range: (-919.8028564453125, 931.1636352539062)\n",
-      "z_range: (0.0, 102.90943908691406)\n",
-      "scene_size_xyz: (1984.7238159179688, 1850.9664916992188, 102.90943908691406)\n",
+      "x_range: (-1062.9154052734375, 1048.40771484375)\n",
+      "y_range: (-967.0293579101562, 921.3159790039062)\n",
+      "z_range: (0.0, 252.38963317871094)\n",
+      "scene_size_xyz: (2111.3231201171875, 1888.3453369140625, 252.38963317871094)\n",
       "\n",
       "--- UAV config ---\n",
       "uav_bounds: [[-1000, 1000], [-1000, 1000], [50, 200]]\n",
@@ -45,7 +45,7 @@
       "building_margin: 1.0\n",
       "\n",
       "--- BS config ---\n",
-      "bs_positions: [[60, 680, 95], [-760, -210, 110]]\n",
+      "bs_positions: [[750, -410, 275], [310, -690, 255]]\n",
       "aim_mode: none\n",
       "\n",
       "--- GU config ---\n",
@@ -69,7 +69,15 @@
     "# CFG_PATH = BASE / \"inner_loop/model_a/configs/raleigh_modelA.json\"\n",
     "# CFG_PATH = BASE / \"inner_loop/model_a/configs/atlanta_modelA.json\"\n",
     "# CFG_PATH = BASE / \"inner_loop/model_a/configs/boston_modelA.json\"\n",
-    "CFG_PATH = BASE / \"inner_loop/model_a/configs/chapel_modelA.json\"\n",
+    "# CFG_PATH = BASE / \"inner_loop/model_a/configs/chapel_modelA.json\"\n",
+    "# CFG_PATH = BASE / \"inner_loop/model_a/configs/open_modelA.json\"\n",
+    "\n",
+    "# CFG_PATH = BASE / \"inner_loop/model_a/configs/charlotte_modelA.json\"\n",
+    "# CFG_PATH = BASE / \"inner_loop/model_a/configs/chicago_modelA.json\"\n",
+    "# CFG_PATH = BASE / \"inner_loop/model_a/configs/durham_modelA.json\"\n",
+    "# CFG_PATH = BASE / \"inner_loop/model_a/configs/la_modelA.json\"\n",
+    "# CFG_PATH = BASE / \"inner_loop/model_a/configs/seattle_modelA.json\"\n",
+    "CFG_PATH = BASE / \"inner_loop/model_a/configs/sf_modelA.json\"\n",
     "\n",
     "with open(CFG_PATH, \"r\", encoding=\"utf-8\") as f:\n",
     "    cfg = json.load(f)\n",
@@ -176,26 +184,26 @@
      "output_type": "stream",
      "text": [
       "--- Top-K tallest buildings (by height=zmax-zmin) ---\n",
-      "[1] id=element_1263\n",
-      "     height=102.91, zmin=0.00, zmax=102.91\n",
-      "     aabb=([-777.2,-751.6], [-229.3,-203.7])\n",
-      "     center=[-764.4140930175781, -216.51783752441406, 51.45471954345703]\n",
-      "[2] id=element_1315\n",
-      "     height=86.39, zmin=0.00, zmax=86.39\n",
-      "     aabb=([-548.8,-456.5], [309.7,390.5])\n",
-      "     center=[-502.65309143066406, 350.1180877685547, 43.196895599365234]\n",
-      "[3] id=element_999\n",
-      "     height=84.78, zmin=0.00, zmax=84.78\n",
-      "     aabb=([-46.7,16.9], [655.0,694.6])\n",
-      "     center=[-14.899064064025879, 674.7796325683594, 42.390342712402344]\n",
-      "[4] id=element_1321\n",
-      "     height=82.38, zmin=0.00, zmax=82.38\n",
-      "     aabb=([29.5,97.5], [665.3,704.7])\n",
-      "     center=[63.50974941253662, 685.0384826660156, 41.18825149536133]\n",
-      "[5] id=element_1320\n",
-      "     height=81.28, zmin=0.00, zmax=81.28\n",
-      "     aabb=([53.0,90.4], [570.9,631.1])\n",
-      "     center=[71.67941856384277, 600.9942932128906, 40.63993835449219]\n"
+      "[1] id=element_2062\n",
+      "     height=252.39, zmin=0.00, zmax=252.39\n",
+      "     aabb=([726.4,780.2], [-432.3,-385.9])\n",
+      "     center=[753.2827758789062, -409.09312438964844, 126.19481658935547]\n",
+      "[2] id=element_1572\n",
+      "     height=230.36, zmin=0.00, zmax=230.36\n",
+      "     aabb=([291.3,322.1], [-706.7,-675.7])\n",
+      "     center=[306.72093200683594, -691.2303466796875, 115.17848205566406]\n",
+      "[3] id=element_117\n",
+      "     height=205.00, zmin=0.00, zmax=205.00\n",
+      "     aabb=([796.8,852.1], [-362.3,-308.8])\n",
+      "     center=[824.4457702636719, -335.5635223388672, 102.5]\n",
+      "[4] id=element_2155\n",
+      "     height=201.23, zmin=0.00, zmax=201.23\n",
+      "     aabb=([504.3,550.8], [-503.5,-451.8])\n",
+      "     center=[527.5694580078125, -477.6363525390625, 100.61511993408203]\n",
+      "[5] id=element_1573\n",
+      "     height=200.36, zmin=0.00, zmax=200.36\n",
+      "     aabb=([367.6,398.1], [-714.4,-682.2])\n",
+      "     center=[382.85862731933594, -698.2835998535156, 100.17848205566406]\n"
      ]
     }
    ],
